<resources>
    <string name="app_name">Magtonic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Magtonic</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_account">Account</string>
    <string name="login_password">Password</string>
    <string name="login_confirm">Login</string>
    <string name="login_account_empty">Account cannot be empty</string>
    <string name="login_password_empty">Password cannot be empty</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_title">Message</string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_server_error">Server error</string>
    <string name="nav_receipt">Receipt</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_storage">Storage</string>
    <string name="nav_others">Others</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_msg">Exit from this app?</string>
    <string name="logout_title">Log out</string>
    <string name="logout_title_msg">Log out from this account</string>
    <string name="ok">Ok</string>
    <string name="hide_keyboard">Hide Keyboard</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="receipt_this_receipt_not_exist">This receipt no is not exist</string>
    <string name="nav_greeting">Hi, %s</string>
    <string name="receipt_barcode_input_hint">Scan barcode or input</string>
    <string name="receipt_upload">Upload to ERP</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Re-Scan</string>
    <string name="bluetooth_setting">Printer Config</string>
    <string name="device_name">Device Name</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="receipt_is_uploaded">This receipt is uploaded</string>
    <string name="bt_not_enabled_leaving">Bluetooth is not enabled, leaving chat...</string>
    <string name="purchase_barcode_error">Purchase barcode error</string>
    <string name="set_printer_first">Please set printer first</string>
    <string name="setting_print_test">Print Test</string>
    <string name="setting_bluetooth_reconnect">Re-connect Printer</string>
    <string name="setting_bluetooth_device_header">Bluetooth Device</string>
    <string name="setting_bluetooth_mac">Mac Address</string>
    <string name="setting_bluetooth_status">Status</string>
    <string name="setting_bluetooth_status_none">Not Connected</string>
    <string name="setting_bluetooth_status_connecting">Connecting...</string>
    <string name="setting_bluetooth_status_connected">Connected</string>
    <string name="nav_printer">Tag Printer</string>
    <string name="tag_printer_status_not_connected">Printer not connect</string>
    <string name="tag_printer_status_connecting">Printer connecting</string>
    <string name="tag_printer_status_connected">Printer connected</string>
    <string name="receipt_uploaded_not_print">Receipt uploaded. Print barcode tag?
    </string>
    <string name="receipt_tag_printed">Tag Printed</string>
    <string name="tag_printed_just_one">Only one tag was printed because of some problem.</string>
    <string name="tag_cannot_be_printed">Cannot print tag. Please check printer or contact with IT.</string>
    <string name="receipt_tag_printed_again">This tag was printed. Print another one?</string>
    <string name="device_scan">Scan...</string>
    <string name="bluetooth_unable_to_connect_printer">Unable to connect printer. Please check if the printer is
        ready.
    </string>
    <string name="device_scan_finish">Scan finish.</string>
    <string name="btn_status_uploaded">Uploaded</string>
    <string name="receipt_upload_error">Upload Error:</string>
    <string name="upload_receipt_failed_po_not_match">Upload po and return is not match</string>
    <string name="json_transfer_error">Json transfer to string error</string>
    <string name="receipt_uploaded_print_only">Receipt already uploaded. Print Only.</string>
    <string name="upload_receipt_connection_timeout">Connection timeout. Please upload again.</string>
    <string name="receipt_storage_rvb01_not_match">Receipt No. is not match.</string>
    <string name="nav_material_issuing">Material Issuing</string>
    <string name="fab_print_confirm">Print tag?</string>
    <string name="wifi_state_connected">Wifi connected to %s</string>
    <string name="wifi_state_disconnected">Wifi disconnected</string>
    <string name="wifi_state_ssid_mismatch">WiFi ssid mismatch</string>
    <string name="material_no">No. %d</string>
    <string name="material_send_po">Material sending po</string>
    <string name="material_send_num">Number</string>
    <string name="material_send_part_no">Part No.</string>
    <string name="material_send_quantity_of_actually_sent">Quantity of actually sent</string>
    <string name="material_send_quantity_of_expected">Quantity of expected</string>
    <string name="material_send_warehouse">Warehouse</string>
    <string name="material_send_locate">Locate No.</string>
    <string name="material_send_batch_no">Batch No.</string>
    <string name="material_send_quantity_should_be_sent">Quantity should be sent</string>
    <string name="material_send_name">Name</string>
    <string name="material_send_spec">Spec</string>
    <string name="material_send_in_stock">In stock</string>
    <string name="storage_upload">Upload to ERP</string>
    <string name="get_or_send_failed_wifi_is_not_connected">Cannot get or post from webservice due to wifi connection is
        lost.
    </string>
    <string name="storage_in_storage_yes">In Storage</string>
    <string name="storage_in_storage_no">Not in storage</string>
    <string name="print_error">Print error. Please check if run out of paper. Press reconnect after check complete.</string>
    <string name="stock_in_stock_no_exist">Cannot load because in-stock no exist.</string>
    <string name="stock_not_in_stock_barcode">Not in-stock barcode</string>
    <string name="material_shortage">Shortage of material</string>
    <string name="material_update_yet">Not yet</string>
    <string name="material_update_failed">Update failed</string>
    <string name="material_update_success">Update success</string>
    <string name="material_update_status">Update status</string>
    <string name="material_viewpage_page">Page %d of %d</string>
    <string name="clear">Clear</string>
    <string name="material_confirm">Save</string>
    <string name="invalid_barcode">Invalid barcode</string>
    <string name="material_wrok_order">Work Order</string>
    <string name="material_quantity_can_not_more_than_storage">Quantity cannot be more than storage</string>
    <string name="material_quantity_cannot_be_with_dot">Qauntity must be integer.</string>
    <string name="quantity_in_stock_empty">Quantity in stock is empty.</string>
    <string name="nav_assets">Assets</string>
    <string name="nav_home">Home</string>
    <string name="receipt_upload_to_erp_msg">Confirm and upload if the number is correct</string>
    <string name="storage_upload_to_erp_msg">Are you sure?</string>
    <string name="nav_about">About</string>
    <string name="version_string">Version: %d.%s</string>
    <string name="nav_property">Property</string>
    <string name="property_barcode_input_hint">Scan barcode or input property No.</string>
    <string name="property_serial">Serial No.</string>
    <string name="property_no">Property No.</string>
    <string name="property_name_1">Name 1</string>
    <string name="property_name_2">Name 2</string>
    <string name="property_supplier">Supplier</string>
    <string name="property_price">Price</string>
    <string name="property_keeper">Keeper</string>
    <string name="property_dept">Department</string>
    <string name="property_supplier_abbreviation">Abbreviation</string>
    <string name="property_emp_name">Employee Name</string>
    <string name="property_keep_dept">Keep Dept</string>
    <string name="property_add_no">Add No.</string>
    <string name="property_status">Status</string>
    <string name="receipt_upload_confirm">Confirm uploaded</string>
    <string name="receipt_confirm_success">Confirm uploaded success</string>
    <string name="receipt_upload_confirm_msg">Confirm the receipt data been uploaded?</string>
    <string name="material_update_confirm">Update confirm?</string>
    <string name="receipt_upload_confirm_retry">Uploaded confirm failed. Please retry.</string>
    <string name="receipt_confirm_fail">"Confirm failed. code: "</string>
    <string name="receipt_confirm_receipt_no">Receipt No.</string>
    <string name="receipt_upload_confirm_again">Please press "upload confirm" again</string>
    <string name="receipt_confirm_doing">Confirm...</string>
    <string name="receipt_uploaded_confirm_connection_timeout">Connection timeout. Please check network and confirm again.</string>
    <string name="receipt_cannot_be_edit">Receipt is uploaded. So it cannot be edit.</string>
    <string name="receipt_uploaded_confirm_rva01_lost">rva01 is missed and it cannot be confirm.</string>
    <string name="barcode_scanning_get_info">Getting Information...</string>
    <string name="barcode_scan_off_because_wifi_is_not_connected">Scan barcode is useless while WiFi is not connected.</string>
    <string name="setting_receipt_upload_auto_confirm">Auto confirm receipts uploaded.</string>
    <string name="nav_guest">Supplier</string>
    <string name="receipt_setting_title">Receipt Setting</string>
    <string name="btn_guest_leave">Leave</string>
    <string name="guest_in_title">"Please check plant and guest No. "</string>
    <string name="btn_guest_in">In</string>
    <string name="guest_in_no">No.</string>
    <string name="guest_in_or_out_dialog_in_date">In Date</string>
    <string name="nav_paint">Signature</string>
    <string name="draw_save_title">Save signature and upload?</string>
    <string name="draw_clear_screen">Clean</string>
    <string name="draw_save_file">Save</string>
    <string name="btn_prev">Prev</string>
    <string name="btn_ok">Ok</string>
    <string name="receipt_uploaded_confirm_failed_info">Confirm uploaded receipt failed. Please press confirm button again.</string>
    <string name="outsource_sendmaterial_signature">OutSource Material Sending</string>
    <string name="outsource_sign">Sign</string>
    <string name="nav_outsourced">Outsourced Processing</string>
    <string name="outsourced_process_supplier">Supplier</string>
    <string name="outsourced_process_dialog_select_supplier">Select supplier</string>
    <string name="receipt_confirm_failed_history">Confirm failed history</string>
    <string name="receipt_print_again">Tag Print Again</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_uninumber">uninumber</string>
    <string name="supplier_add_dialog_title">Please input name and uninumber</string>
    <string name="delete">Delete</string>
</resources>