<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/baseline_home_black_48"
                android:title="@string/nav_home"
                android:visible="false"/>
        <item
                android:id="@+id/nav_receipt"
                android:icon="@drawable/baseline_receipt_black_48"
                android:title="@string/nav_receipt"
                android:visible="false"/>
        <item
                android:id="@+id/nav_storage"
                android:icon="@drawable/factory_stock_house"
                android:title="@string/nav_storage"
                android:visible="false"/>
        <item
                android:id="@+id/nav_material_issuing"
                android:icon="@drawable/baseline_unarchive_black_48"
                android:title="@string/nav_material_issuing"
                android:visible="false"/>
        <item
                android:id="@+id/nav_outsourced"
                android:icon="@drawable/baseline_edit_black_48"
                android:title="@string/nav_outsourced"
                android:visible="false"/>
        <item
                android:id="@+id/nav_property"
                android:icon="@drawable/baseline_monetization_on_black_48"
                android:title="@string/nav_property"
                android:visible="false"/>
        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/baseline_touch_app_black_48"
                android:title="@string/nav_login"
                android:visible="true"/>
        <item
                android:id="@+id/nav_tag_printer"
                android:icon="@drawable/baseline_local_printshop_black_48"
                android:title="@string/nav_printer"
                android:visible="true"/>

        <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/baseline_settings_black_48"
                android:title="@string/nav_setting"
                android:visible="false"/>
        <item
                android:id="@+id/nav_guest"
                android:icon="@drawable/baseline_transfer_within_a_station_black_48"
                android:title="@string/nav_guest"
                android:visible="false"/>

        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_info_black_48"
                android:title="@string/nav_about"
                android:visible="true"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_black_48"
                android:title="@string/nav_logout"
                android:visible="false"/>

        <!--item android:title="@string/nav_others">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                            android:id="@+id/nav_tag_printer"
                            android:icon="@drawable/baseline_local_printshop_black_48"
                            android:title="@string/nav_printer"/>
                    <item
                            android:id="@+id/nav_logout"
                            android:icon="@drawable/baseline_exit_to_app_black_48"
                            android:title="@string/nav_logout"
                            android:visible="false"/>
                    <item
                            android:id="@+id/nav_login"
                            android:icon="@drawable/baseline_touch_app_black_48"
                            android:title="@string/nav_login"
                            android:visible="true"/>
                    <item
                            android:id="@+id/nav_home"
                            android:icon="@drawable/baseline_home_black_48"
                            android:title="@string/nav_home"
                            android:visible="false"/>
                    <item
                            android:id="@+id/nav_setting"
                            android:icon="@drawable/baseline_settings_black_48"
                            android:title="@string/nav_setting"
                            android:visible="false"/>
                    <item
                            android:id="@+id/nav_guest"
                            android:icon="@drawable/baseline_transfer_within_a_station_black_48"
                            android:title="@string/nav_guest"
                            android:visible="false"/>
                    <item
                            android:id="@+id/nav_about"
                            android:icon="@drawable/baseline_info_black_48"
                            android:title="@string/nav_about"/>

                </group>
            </menu>
        </item-->
    </group>
</menu>
