<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textViewSupplierDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_30"
            android:text="@string/supplier_add_dialog_title"
            android:gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">




    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

        <EditText
                android:id="@+id/editTextSupplierName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_25"
                android:hint="@string/supplier_name"
                android:gravity="center"
                android:layout_weight="1"
                android:inputType="text"/>

        <EditText
                android:id="@+id/editTextSupplierNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/text_size_30"
                android:inputType="text"
                android:gravity="center"
                android:maxLength="10"
                android:hint="@string/supplier_uninumber"
                android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:id="@+id/btnSupplierDialogDelete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="@dimen/text_size_30"
                android:visibility="gone"/>

        <Button
                android:id="@+id/btnSupplierDialogCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textSize="@dimen/text_size_30"/>

        <Button
                android:id="@+id/btnSupplierDialogConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/confirm"
                android:textSize="@dimen/text_size_30"/>

    </LinearLayout>

</LinearLayout>