<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                            android:orientation="vertical">
    <TextView
            android:id="@+id/setting_bluetooth_name_header"
            android:text="@string/setting_bluetooth_device_header"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"/>
    <TextView
            android:id="@+id/setting_bluetooth_name"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/setting_bluetooth_mac_header"
            android:text="@string/setting_bluetooth_mac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/setting_bluetooth_mac"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/setting_bluetooth_status_header"
            android:text="@string/setting_bluetooth_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    <TextView
            android:id="@+id/setting_bluetooth_status"
            android:text="Not connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textAlignment="center"/>

    <Button
            android:id="@+id/btnConnect"
            android:text="@string/setting_bluetooth_reconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button android:layout_width="match_parent" android:layout_height="60dp" android:visibility="invisible"/>

    <Button
            android:id="@+id/btnPrintTest"
            android:text="@string/setting_print_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>