<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/textViewOutsourcedSupplierDialogMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_30"
            android:text="@string/outsourced_process_dialog_select_supplier"
            android:gravity="center"/>



    <Spinner
            android:id="@+id/spinnerSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

        <Button
                android:id="@+id/btnOutSourcedDialogCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_30"
                android:text="@string/cancel"/>

        <Button
                android:id="@+id/btnOutSourcedDialogConfirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_30"
                android:text="@string/confirm"/>

    </LinearLayout>



</LinearLayout>