<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:id="@+id/paint_container">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <com.magtonic.magtonicwarehouse.data.PaintBoard
                android:layout_weight="1"
                android:id="@+id/viewPaint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="9">

            <Button
                    android:id="@+id/btnPrev"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_prev"
                    android:textSize="@dimen/text_size_25"/>

            <Button
                    android:id="@+id/btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/draw_clear_screen"
                    android:textSize="@dimen/text_size_25"
                    android:layout_weight="1"/>

            <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/draw_save_file"
                    android:textSize="@dimen/text_size_25"
                    android:layout_weight="1"/>
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>