<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingTop="?attr/actionBarSize"
        android:id="@+id/receipt_list_container">



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusableInTouchMode="true">
        <EditText
                android:id="@+id/editTextReceipt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/receipt_barcode_input_hint"
                android:textSize="@dimen/text_size_25"
                android:textAlignment="center"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:minLines="1"
                android:lines="1" />

        <LinearLayout
                android:id="@+id/linearLayoutReceipt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">



                <ListView
                        android:id="@+id/listViewReceipt"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                </ListView>

            <Button
                    android:id="@+id/btnUpload"
                    android:text="@string/receipt_upload"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_height="60dp"
                    android:visibility="gone"/>
            <Button
                    android:id="@+id/btnReceiptUploadConfirm"
                    android:text="@string/receipt_upload_confirm"
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_height="60dp"
                    android:visibility="gone"/>
        </LinearLayout>



    </LinearLayout>



</RelativeLayout>